# structured-tutorials

./: .gitignore  .readthedocs.yaml  README.md  generate-schema.py  main.py  pyproject.toml
.github/workflows/: docs.yml  mypy.yml  quality.yml  tests.yml
docs/: changelog.rst  conf.py  how-tos.rst  index.rst  models.rst  quickstart.rst  reference.rst  spelling_wordlist.txt
docs/howto/: chdir.rst  test-commands.rst  vagrant.rst
docs/include/: quickstart.rst
docs/tutorials/alternatives/: tutorial.yaml
docs/tutorials/alternatives-chdir-at-top-level/: tutorial.yaml
docs/tutorials/chdir/: tutorial.yaml
docs/tutorials/chdir-false/: tutorial.yaml
docs/tutorials/chdir-with-mkdtemp/: tutorial.yaml
docs/tutorials/exit_code/: tutorial.yaml
docs/tutorials/file/: tutorial.yaml
docs/tutorials/file-copy/: tutorial.yaml
docs/tutorials/interactive-prompt/: tutorial.yaml
docs/tutorials/quickstart/: tutorial.yaml
docs/tutorials/required_executables/: tutorial.yaml
docs/tutorials/simple-file/: tutorial.yaml
docs/tutorials/skip-part-doc/: tutorial.yaml
docs/tutorials/skip-part-run/: tutorial.yaml
docs/tutorials/templates/: tutorial.yaml
docs/tutorials/test-command/: tutorial.yaml
docs/tutorials/test-output/: tutorial.yaml
docs/tutorials/vagrant-machines/: Vagrantfile  tutorial.yaml
docs/tutorials/vagrant-prepare-box/: Vagrantfile  tutorial.yaml
docs/tutorials/vagrant-prepare-box/box/: Vagrantfile  provision.sh
docs/tutorials/vagrant-simple/: Vagrantfile  tutorial.yaml
docs/tutorials/vagrant-subdir/: tutorial.yaml
structured_tutorials/: __init__.py  cli.py  errors.py  models.py  output.py  textwrap.py  tutorial.py  typing.py  utils.py
structured_tutorials/models/: base.py  parts.py  tests.py  tutorial.py  types.py  validators.py
structured_tutorials/runners/: base.py  local.py  vagrant.py
structured_tutorials/sphinx/: __init__.py  directives.py  utils.py
structured_tutorials/templates/: alternative_part.rst.template  file_part.rst.template
tests/: conftest.py  test_cli.py  test_local_runner.py  test_models.py  test_utils.py
tests/data/: copy_file.yaml  file.txt  minimal.yaml
tests/data/docs/: conf.py  index.rst
tests/data/tutorials/: Vagrantfile.jinja  alternatives-chdir-false.yaml  alternatives-chdir-in-top-level.yaml  alternatives-chdir.yaml  alternatives-configuration.yaml  command-as-list.yaml  command-hide-output.yaml  command-skip-single-command.yaml  command-test-output.yaml  command-with-chdir-template.yaml  command-with-chdir-with-parts.yaml  command-with-chdir.yaml  initial-context.yaml  prompt-confirm.yaml  vagrant-cwd.yaml  vagrant-multi-machine.yaml  vagrant-prepare-box.yaml  vagrant-update-env.yaml  vagrant.yaml
tests/models/: __init__.py  test_validators.py
tests/runners/: test_base.py  test_local.py
tests/runners/local/: test_alternatives.py  test_command.py  test_local.py  test_prompt.py
tests/runners/local/commands/: test_environment.py
tests/runners/vagrant/: conftest.py  test_vagrant.py
tests/sphinx/: test_app.py  test_build.py  test_get_tutorial_path.py  test_wrapper.py
tutorials/quickstart_from_source/: tutorial.yaml
